--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ header{
     padding-right: 15px;
     color: #fff;
     background-color: rgb(0, 64, 119);
-    border-radius: 20%;
     font-weight: bold;
 }
 
@@ -76,9 +75,8 @@ header{
     padding-left: 15px;
     padding-right: 15px;
     color: #fff;
-    background-color: rgb(0, 64, 119);
-    border-radius: 20%;
-    font-weight: bold;
+    background-color: rgb(0, 98, 184);
+    font-weight:bolder;
 }
 
 .versao{
