--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ header{
     padding-left: 15px;
     padding-right: 15px;
     color: #fff;
+    border: rgb(0, 64, 119) 2px solid;
     background-color: rgb(0, 64, 119);
     font-weight: bold;
 }
@@ -75,6 +76,7 @@ header{
     padding-left: 15px;
     padding-right: 15px;
     color: #fff;
+    border: rgb(0, 64, 119) 2px solid;
     background-color: rgb(0, 98, 184);
     font-weight:bolder;
 }
